services/demo-v51/k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: demo-v51
  labels:
    name: demo-v51
    app: demo-v51-api
