services/demo-v51/k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: demo-v51-service
  namespace: demo-v51
  labels:
    app: demo-v51
spec:
  type: ClusterIP
  ports:
  - port: 80
    targetPort: 5000
    protocol: TCP
    name: http
  selector:
    app: demo-v51
